fix: address remaining safe SonarQube findings
- remove accidentally committed IDE scratch tracker file
- replace direct Thread.sleep calls in tests with explicit wait helpers
- make ACP terminal wait_for_exit wait for output capture completion
- refactor nested try/catch findings into helper methods
- clean up TODO comments, empty marker classes, duplicate methods, local variable names, repeated value assignments, and static member access
- harden MCP config temp-file creation by writing under private project/user config directories instead of public temp directories
- encapsulate ChatWebServer callback fields and document framework-required IntelliJ XmlSerializer public state fields
- add deprecation metadata where the deprecated API surface remains intentional

S107 parameter-count findings are intentionally left for dedicated API refactors because they require broader design changes.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>